AArch64/PPC64 build failures after JDK-8199712 (Flight Recorder)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • jfr
    • b14

        Multiple build failures like these on aarch64 and ppc64el:

        /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/runtime/thread.hpp:1168:26: error: inline function 'JavaThreadState JavaThread::thread_state() const' used but never defined [-Werror]
           inline JavaThreadState thread_state() const;
                                  ^~~~~~~~~~~~
        In file included from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/memory/resourceArea.hpp:29:0,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/ci/ciConstantPoolCache.hpp:28,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/ci/ciInstanceKlass.hpp:28,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/debugInfoRec.hpp:29,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/ci/ciEnv.hpp:31,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/ci/compilerInterface.hpp:32,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/opto/compile.hpp:29,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/opto/node.hpp:29,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/opto/connode.hpp:28,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/opto/callnode.hpp:28,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/opto/machnode.hpp:28,
                         from ad_aarch64.hpp:34,
                         from ad_aarch64_expand.cpp:29:

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: