8203278: AArch64/PPC64 build failures after JDK-8199712 (Flight Recorder)

Reviewed-by: mgronlun